--- a/gradle.properties
+++ b/gradle.properties
@@ -113,4 +113,5 @@ SENTRY_DSN_KEY=0
 SENTRY_DSN_KEY_DEBUG=0
 SENTRY_DSN_KEY_COBRAND=0
 #INDICATIVE
-INDICATIVE_KEY=0
+INDICATIVE_KEY_PROD=0
+INDICATIVE_KEY_DEV=0
