--- a/packageinstaller/src/main/AndroidManifest.xml
+++ b/packageinstaller/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
-<manifest
-    package="cm.aptoide.pt.packageinstaller"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cm.aptoide.pt.packageinstaller">
+
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+
+</manifest>
