--- a/dataprovider/src/main/AndroidManifest.xml
+++ b/dataprovider/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
   <application
       android:allowBackup="false"
