--- a/gradle.properties
+++ b/gradle.properties
@@ -57,7 +57,7 @@ COBRAND_APPLICATION_ID_SUFFIX=cobrand
 COBRAND_VERSION=1
 COBRAND_OEMID=0
 COBRAND_MARKET_NAME=cobrand
-COBRAND_THEME=cobrand
+COBRAND_THEME=green
 #android configurations for aptoide
 APTOIDE_PRE_DEX_LIBRARIES=false
 APTOIDE_DEX_JAVA_MAX_HEAP_SIZE=2g
