Unify libraries dependencies and update Moshi versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx8096M
 android.useAndroidX=true
 android.enableJetifier=true
+android.jetifier.ignorelist=moshi-*
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt
 #aptoide hostnames for productions mode
 APTOIDE_WEB_SERVICES_HOST_PRODUCTION=webservices.aptoide.com
