--- a/aptoide-authentication-core/build.gradle
+++ b/aptoide-authentication-core/build.gradle
@@ -17,21 +17,21 @@ repositories {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71")
+  implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:${CoreVersion.KOTLIN}")
 
   //local unit tests
   testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.3.71")
-  testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7")
-  testImplementation("org.mockito:mockito-core:2.28.2")
+  testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:${CoreVersion.COROUTINES}")
+  testImplementation("org.mockito:mockito-core:${TestLibraryVersionOldModules.MOCKITO_CORE}")
 
 
   //converters
-  kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.3")
-  implementation("com.squareup.moshi:moshi-kotlin:1.9.3")
-  implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
+  kapt("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
+  implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
+  implementation("com.squareup.retrofit2:converter-moshi:${LibraryVersionOldModules.RETROFIT}")
 
   //network
-  implementation("com.squareup.retrofit2:retrofit:2.9.0")
-  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7")
-  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7")
+  implementation("com.squareup.retrofit2:retrofit:${LibraryVersionOldModules.RETROFIT}")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${LibraryVersionOldModules.COROUTINES}")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${LibraryVersionOldModules.COROUTINES}")
 }
