[DT-22] Changed cobrand variable names to match the new requirements

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,11 +54,11 @@ COMPILE_SDK_VERSION=28
 MINIMUM_SDK_VERSION=16
 LIB_MINIMUM_SDK_VERSION=16
 #cobrand configurations
-COBRAND_APPLICATION_ID_SUFFIX=cobrand
+COBRAND_APPLICATION_ID_SUFFIX=dt
 COBRAND_VERSION=1
 COBRAND_OEMID=0
-COBRAND_MARKET_NAME=cobrand
-COBRAND_THEME=green
+COBRAND_MARKET_NAME=dt
+COBRAND_THEME=red
 #android configurations for aptoide
 APTOIDE_PRE_DEX_LIBRARIES=false
 APTOIDE_DEX_JAVA_MAX_HEAP_SIZE=2g
