[DT-22] updated cobrand market name

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,7 +57,7 @@ LIB_MINIMUM_SDK_VERSION=16
 COBRAND_APPLICATION_ID_SUFFIX=dt
 COBRAND_VERSION=1
 COBRAND_OEMID=0
-COBRAND_MARKET_NAME=dt
+COBRAND_MARKET_NAME=digital-turbine
 COBRAND_THEME=red
 #android configurations for aptoide
 APTOIDE_PRE_DEX_LIBRARIES=false
