--- a/packageinstaller/build.gradle
+++ b/packageinstaller/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion Integer.parseInt(project.COMPILE_SDK_VERSION)
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 26
+    minSdkVersion project.MINIMUM_SDK_VERSION
+    targetSdkVersion Integer.parseInt(project.TARGET_SDK_VERSION)
     versionCode 1
     versionName "1.0"
 
