--- a/aptoide-analytics-default-implementation/build.gradle
+++ b/aptoide-analytics-default-implementation/build.gradle
@@ -23,7 +23,7 @@ android {
     minSdkVersion project.MINIMUM_SDK_VERSION
   }
 
-  lintOptions {
+  lint {
     abortOnError false
   }
 
@@ -41,6 +41,7 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+  namespace 'cm.aptoide.analyticsimplementation'
 }
 
 dependencies {
