--- a/aptoide-ui/src/main/AndroidManifest.xml
+++ b/aptoide-ui/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cm.aptoide.pt.aptoide_ui">
-
-</manifest>
+<manifest />
