--- a/downloadmanager/src/main/AndroidManifest.xml
+++ b/downloadmanager/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cm.aptoide.pt.downloadmanager">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application
       android:allowBackup="false"
