--- a/aptoide-analytics-core/build.gradle
+++ b/aptoide-analytics-core/build.gradle
@@ -43,8 +43,8 @@ android {
 
 dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
-  testImplementation "org.mockito:mockito-core:1.10.19"
-  testImplementation 'junit:junit:4.12'
+  testImplementation "org.mockito:mockito-core:${TestLibraryVersionOldModules.MOCKITO_CORE}"
+  testImplementation "junit:junit:${TestLibraryVersionOldModules.JUNIT}"
 }
 
 sourceCompatibility = 1.8
