--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
       tools:replace="android:allowBackup">
     <activity
         android:name=".MainActivity"
+        android:launchMode="singleInstance"
         android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
