[DT-427] Updated project libraries

--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -19,8 +19,8 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaLibrary.SOURCE_COMPATIBILITY_JAVA_VERSION
+    targetCompatibility = JavaLibrary.TARGET_COMPATIBILITY_JAVA_VERSION
   }
   packagingOptions {
     exclude 'META-INF/services/javax.annotation.processing.Processor'
