--- a/feature-profile/src/main/AndroidManifest.xml
+++ b/feature-profile/src/main/AndroidManifest.xml
@@ -1,2 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="cm.aptoide.pt.feature_profile" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+  <uses-permission android:name="android.permission.CAMERA" />
+
+  <application
+      android:allowBackup="true"
+      android:label="@string/app_name"
+      android:supportsRtl="true"
+      tools:ignore="MissingApplicationIcon">
+
+    <provider
+        android:name="androidx.core.content.FileProvider"
+        android:authorities="${applicationId}.fileprovider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+      <meta-data
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/file_paths" />
+    </provider>
+
+  </application>
+
+</manifest>
