--- a/aptoide-installer/src/main/AndroidManifest.xml
+++ b/aptoide-installer/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <!--Permissions for the Android below 11 (R)-->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
   <application
-      android:allowBackup="true"/>
-
-
+      android:allowBackup="true"
+      android:requestLegacyExternalStorage="true" />
 </manifest>
