--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,4 @@ include 'app',
     ':aptoide-views',
     ':packageinstaller',
     ':aptoide-authentication-core',
-    ':aptoide-authentication-rx', ':appcoins'
+    ':aptoide-authentication-rx', ':appcoins', ':aptoide-ab-testing'
