[DT-707] Add payment intent filter

--- a/feature-payment/src/main/AndroidManifest.xml
+++ b/feature-payment/src/main/AndroidManifest.xml
@@ -4,7 +4,21 @@
   <application>
     <activity
         android:name=".PaymentActivity"
-        android:exported="false" />
+        android:exported="true">
+
+      <intent-filter
+          android:autoVerify="true"
+          android:priority="${payment_intent_filter_priority}">
+        <action android:name="android.intent.action.VIEW" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+
+        <data android:scheme="https" />
+        <data android:host="${payment_host}" />
+        <data android:pathPrefix="/transaction" />
+      </intent-filter>
+    </activity>
   </application>
 
 </manifest>
