--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,9 @@ APTOIDE_WEB_SERVICES_REACTIONS_HOST=api.aptoide.com
 APTOIDE_WEB_SERVICES_RAKAM_HOST=rakam-api.aptoide.com
 #notifications
 CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
+#OSP
+MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
+MANIFEST_PAYMENT_HOST=apichain.catappult.io
 #android for aptoide
 TARGET_SDK_VERSION=33
 COMPILE_SDK_VERSION=33
