--- a/gradle.properties
+++ b/gradle.properties
@@ -51,6 +51,8 @@ CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
 #OSP
 MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
 MANIFEST_PAYMENT_HOST=apichain.catappult.io
+CATAPPULT_HOST_DEV=api.dev.catappult.io
+CATAPPULT_HOST=api.catappult.io
 #android for aptoide
 TARGET_SDK_VERSION=33
 COMPILE_SDK_VERSION=33
