[DT-709] Build initial payments UI

--- a/payments/osp-handler/src/main/AndroidManifest.xml
+++ b/payments/osp-handler/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
   <application>
     <activity
         android:name=".PaymentActivity"
+        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay"
         android:exported="true">
 
       <intent-filter
