--- a/payments/base/payment-manager/src/main/AndroidManifest.xml
+++ b/payments/base/payment-manager/src/main/AndroidManifest.xml
@@ -1,24 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-  <application>
-    <activity
-        android:name=".PaymentActivity"
-        android:exported="true">
-
-      <intent-filter
-          android:autoVerify="true"
-          android:priority="${payment_intent_filter_priority}">
-        <action android:name="android.intent.action.VIEW" />
-
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-
-        <data android:scheme="https" />
-        <data android:host="${payment_host}" />
-        <data android:pathPrefix="/transaction" />
-      </intent-filter>
-    </activity>
-  </application>
+<manifest >
 
 </manifest>
