--- a/payments/osp-handler/src/main/AndroidManifest.xml
+++ b/payments/osp-handler/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   <application>
     <activity
         android:name=".PaymentActivity"
-        android:theme="@style/Theme.AppCompat.Transparent.NoDisplay"
+        android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
         android:exported="true">
 
       <intent-filter
