Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,1 @@
-files:
-  - source: /aptoide-ui/src/main/res/values/strings.xml
-    translation: /aptoide-ui/src/main/res/values-%android_code%/%original_file_name%
+files: []
