--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,1 +1,3 @@
-files: []
+files:
+  - source: /aptoide-ui/src/main/res/values/strings.xml
+    translation: /aptoide-ui/src/main/res/values-%android_code%/%original_file_name%
