[DT-711] Add adyen keys to repo

--- a/gradle.properties
+++ b/gradle.properties
@@ -53,6 +53,8 @@ MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
 MANIFEST_PAYMENT_HOST=apichain.catappult.io
 CATAPPULT_HOST_DEV=api.dev.catappult.io
 CATAPPULT_HOST=api.catappult.io
+ADYEN_PUBLIC_KEY_DEV=0
+ADYEN_PUBLIC_KEY=0
 #android for aptoide
 TARGET_SDK_VERSION=33
 COMPILE_SDK_VERSION=33
