[DT-713] Add developer wallet repository

--- a/gradle.properties
+++ b/gradle.properties
@@ -49,6 +49,8 @@ APTOIDE_WEB_SERVICES_RAKAM_HOST=rakam-api.aptoide.com
 #notifications
 CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
 #OSP
+BDS_BASE_HOST_DEV=ws75-devel.aptoide.com
+BDS_BASE_HOST=ws75-secondary.aptoide.com
 MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
 MANIFEST_PAYMENT_HOST=apichain.catappult.io
 CATAPPULT_HOST_DEV=api.dev.catappult.io
