--- a/payments/osp-handler/src/main/AndroidManifest.xml
+++ b/payments/osp-handler/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <activity
         android:name=".PaymentActivity"
         android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
+        android:launchMode="singleInstance"
         android:exported="true">
 
       <intent-filter
@@ -18,6 +19,14 @@
         <data android:scheme="https" />
         <data android:host="${payment_host}" />
         <data android:pathPrefix="/transaction" />
+      </intent-filter>
+
+      <intent-filter android:autoVerify="true"
+          android:priority="${payment_intent_filter_priority}">
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:host="${applicationId}" android:scheme="${adyenCheckoutScheme}"/>
       </intent-filter>
     </activity>
   </application>
