--- a/payments/payment-methods/paypal/src/main/AndroidManifest.xml
+++ b/payments/payment-methods/paypal/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <application>
+    <activity android:name=".presentation.PaypalWebViewActivity" />
+  </application>
 </manifest>
