[DT-1060] Implement getBuyIntent method on billing AIDL binder

--- a/payments/uri-handler/src/main/AndroidManifest.xml
+++ b/payments/uri-handler/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         <data android:pathPrefix="/transaction" />
       </intent-filter>
 
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:scheme="appcoins-sdk" />
+        <data android:pathPrefix="/transaction" />
+      </intent-filter>
+
       <intent-filter android:autoVerify="true"
           android:priority="${payment_intent_filter_priority}">
         <action android:name="android.intent.action.VIEW"/>
