--- a/gradle.properties
+++ b/gradle.properties
@@ -48,13 +48,13 @@ APTOIDE_WEB_SERVICES_REACTIONS_HOST=api.aptoide.com
 APTOIDE_WEB_SERVICES_RAKAM_HOST=rakam-api.aptoide.com
 #notifications
 CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
-#OSP
-BDS_BASE_HOST_DEV=ws75-devel.aptoide.com
-BDS_BASE_HOST=ws75-secondary.aptoide.com
-MANIFEST_PAYMENT_HOST_DEV=apichain.dev.catappult.io
-MANIFEST_PAYMENT_HOST=apichain.catappult.io
-CATAPPULT_HOST_DEV=api.dev.catappult.io
-CATAPPULT_HOST=api.catappult.io
+#PAYMENTS
+PAYMENT_DEEPLINK_HOST_DEV=apichain.dev.catappult.io
+PAYMENT_DEEPLINK_HOST=apichain.catappult.io
+PAYMENT_BACKEND_HOST_DEV=apichain.dev.catappult.io
+PAYMENT_BACKEND_HOST=apichain.catappult.io
+PAYMENT_MS_HOST_DEV=api.dev.catappult.io
+PAYMENT_MS_HOST=api.catappult.io
 ADYEN_PUBLIC_KEY="ADYEN_PUBLIC_KEY"
 ADYEN_PUBLIC_KEY_DEV="ADYEN_PUBLIC_KEY"
 #android for aptoide
