[DT-1130] Reformat code and optimize imports

--- a/payments/payment-methods/paypal-compose/src/main/AndroidManifest.xml
+++ b/payments/payment-methods/paypal-compose/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
   <application>
-    <activity android:name="com.appcoins.payment_method.paypal.presentation.PaypalWebViewActivity" />
+    <activity android:name=".PaypalWebViewActivity" />
   </application>
 </manifest>
