--- a/payments/uri-handler/src/main/AndroidManifest.xml
+++ b/payments/uri-handler/src/main/AndroidManifest.xml
@@ -24,16 +24,22 @@
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
+
         <data android:scheme="appcoins-sdk" />
         <data android:pathPrefix="/transaction" />
       </intent-filter>
 
-      <intent-filter android:autoVerify="true"
+      <intent-filter
+          android:autoVerify="true"
           android:priority="${payment_intent_filter_priority}">
-        <action android:name="android.intent.action.VIEW"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:host="${applicationId}" android:scheme="${adyenCheckoutScheme}"/>
+        <action android:name="android.intent.action.VIEW" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+
+        <data
+            android:host="${applicationId}"
+            android:scheme="${adyenCheckoutScheme}" />
       </intent-filter>
     </activity>
   </application>
