[DT-1130] Add default state for IAB and SDK payment

--- a/payments/billing-sdk/src/main/AndroidManifest.xml
+++ b/payments/billing-sdk/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
   <application>
     <service
         android:name=".AppcoinsBillingService"
-        android:exported="true">
+        android:exported="true"
+        android:enabled="${defaultSDKState}">
       <intent-filter>
         <action android:name="${applicationId}.iab.action.BIND" />
       </intent-filter>
