--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -2,28 +2,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-  <uses-permission android:name="android.permission.INTERNET" />
   <application
       android:name=".AptoideApplication"
       android:allowBackup="true"
       android:fullBackupContent="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
+      android:networkSecurityConfig="@xml/network_security_config"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:networkSecurityConfig="@xml/network_security_config"
       android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
       tools:replace="android:allowBackup">
     <activity
         android:name=".MainActivity"
-        android:launchMode="singleInstance"
-        android:exported="true">
+        android:exported="true"
+        android:launchMode="singleInstance">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+
+      <intent-filter android:autoVerify="true">
+        <action android:name="android.intent.action.VIEW" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+
+        <data android:scheme="ag" />
+      </intent-filter>
       <!-- ${dataPlaceholder} -->
     </activity>
   </application>
+
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+  <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
