--- a/payments/payment-methods/adyen/src/main/AndroidManifest.xml
+++ b/payments/payment-methods/adyen/src/main/AndroidManifest.xml
@@ -1,4 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <application>
+    <activity
+        android:name=".presentation.AdyenRedirectActivity"
+        android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
+        android:exported="true"
+        android:launchMode="singleTop"
+        android:excludeFromRecents="true">
+      <intent-filter android:autoVerify="true">
+        <action android:name="android.intent.action.VIEW" />
+        <data
+            android:host="${applicationId}"
+            android:scheme="adyencheckout" />
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".presentation.Adyen3DS2Activity"
+        android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
+        android:exported="true"
+        android:launchMode="singleTop"
+        android:excludeFromRecents="true">
+      <intent-filter android:autoVerify="true">
+        <action android:name="android.intent.action.VIEW" />
+        <data
+            android:host="${applicationId}"
+            android:scheme="adyencheckout" />
+      </intent-filter>
+    </activity>
+  </application>
 </manifest>
