update target from sdk 25 into 28 migrate download notification into the use of channels migrate blacklisted implicit broadcast receivers to explict broadcast receivers (that were banned from implicit usage in Android 8 ) Add new manifest permission: FOREGROUND_SERVICE because it is mandatory for Android 9 targetting apps to declare to use foreground services. adapt installation and uninstall (downgrade flow) to Android 8. New permissions are added because of this (REQUEST_INSTALL & REQUEST_UNINSTALL)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.CAMERA" />
 
+  <!-- Apps targeting APIs greater than 25 must hold this permission in order to use Intent.ACTION_INSTALL_PACKAGE -->
+  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
+  <!-- Allows a regular application to use Service.startForeground. Mandatory 28+ -->
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <uses-sdk tools:overrideLibrary="com.flurry.android.analytics.sdk" />
