[DT-1158] - Change launch mode of paymentactivity

--- a/payments/uri-handler/src/main/AndroidManifest.xml
+++ b/payments/uri-handler/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <activity
         android:name=".PaymentActivity"
         android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
-        android:launchMode="singleInstance"
+        android:launchMode="singleTop"
         android:exported="true"
         android:enabled="${defaultIABState}">
 
