Revert "[DT-1158] - Change launch mode of paymentactivity"
This reverts commit 9b36e881f2151794b1f12358cb3c5ea7b4554fa7.

--- a/payments/uri-handler/src/main/AndroidManifest.xml
+++ b/payments/uri-handler/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <activity
         android:name=".PaymentActivity"
         android:theme="@style/Theme.MaterialComponents.Transparent.NoDisplay"
-        android:launchMode="singleTop"
+        android:launchMode="singleInstance"
         android:exported="true"
         android:enabled="${defaultIABState}">
 
