--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <activity
         android:name=".MainActivity"
         android:exported="true"
-        android:launchMode="singleInstance">
+        android:launchMode="singleTop">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
