[APP-2398] Add firebase messaging

--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -44,5 +44,20 @@
         android:launchMode="standard"
         android:screenOrientation="portrait" />
 
+    <service
+        android:name=".notifications.AptoideGamesNotificationsService"
+        android:exported="false">
+      <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+      </intent-filter>
+    </service>
+
+    <meta-data
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@drawable/ic_notification_icon" />
+    <meta-data
+        android:name="com.google.firebase.messaging.default_notification_color"
+        android:resource="@color/ic_launcher_background" />
+
   </application>
 </manifest>
