--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,8 @@ APTOIDE_WEB_SERVICES_APICHAIN_BDS_HOST=apichain.blockchainds.com
 APTOIDE_WEB_SERVICES_NOTIFICATION_HOST=pnp.aptoide.com
 APTOIDE_WEB_SERVICES_REACTIONS_HOST=api.aptoide.com
 APTOIDE_WEB_SERVICES_RAKAM_HOST=rakam-api.aptoide.com
+APTOIDE_WEB_SERVICES_MMP_HOST_DEVELOPMENT=aptoide-mmp.dev.aptoide.com
+APTOIDE_WEB_SERVICES_MMP_HOST_PRODUCTION=aptoide-mmp.aptoide.com
 #notifications
 CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
 #android for aptoide (cobrand and vanilla)
