--- a/gradle.properties
+++ b/gradle.properties
@@ -85,7 +85,7 @@ SIGNATURE_UPLOADER=0
 VERSION_CODE_VANILLA_PROD=12000
 VERSION_CODE_VANILLA_DEV=12000
 VERSION_CODE_VANILLA_INTERNAL=12000
-VERSION_NAME_VANILLA=9.21.0.1
+VERSION_NAME_VANILLA=test-9.22.0.0
 #aptoide DB - Room
 ROOM_SCHEMA_VERSION=107
 ROOM_DATABASE_NAME=aptoide.db
