--- a/gradle.properties
+++ b/gradle.properties
@@ -51,8 +51,8 @@ APTOIDE_WEB_SERVICES_MMP_HOST_PRODUCTION=aptoide-mmp.aptoide.com
 #notifications
 CAMPAIGN_NOTIFICATION_SYNC_INTERVAL_MILLIS=43200000
 #android for aptoide (cobrand and vanilla)
-TARGET_SDK_VERSION=29
-COMPILE_SDK_VERSION=29
+TARGET_SDK_VERSION=31
+COMPILE_SDK_VERSION=31
 MINIMUM_SDK_VERSION=16
 LIB_MINIMUM_SDK_VERSION=16
 #cobrand configurations
@@ -117,3 +117,4 @@ SENTRY_DSN_KEY_COBRAND=0
 #INDICATIVE
 INDICATIVE_KEY_PROD=0
 INDICATIVE_KEY_DEV=0
+android.jetifier.ignorelist = com.squareup.moshi
