--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
       android:supportsRtl="true"
       android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
       tools:replace="android:allowBackup">
+    <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
     <activity
         android:name=".MainActivity"
         android:exported="true"
